# RiDMC

./: .gitignore
RiDMC/: DESCRIPTION  NAMESPACE  cleanup  configure  configure.ac
RiDMC/R/: basin.R  basin_multi.R  basin_slow.R  bifurcation.R  bifurcationMap.R  colorLegendGrob.R  cycles.R  domain.R  grobs.R  imageGrobs.R  lexp.R  lexpMap.R  model.R  plotGrob.R  polygons.R  raster.R  ribbonGrobs.R  sets.R  tools.R  trajectory.R  version.R  zzz.R
RiDMC/inst/: ChangeLog
RiDMC/inst/models/: OL3G.lua  OL3G_noise.lua  cremona.lua  gingerman.lua  henon.lua  ikeda.lua  logistic.lua  lorenz.lua  lv.lua  msmith.lua  quasi2.lua  rossler.lua  rotor.lua  silnikov.lua  sinecircle.lua  standard.lua  tent.lua  tinkerbell.lua
RiDMC/inst/models/Economic/: bh.lua  cournot.lua  cournotad.lua  diamond.lua  multacc.lua  olg1.lua  olgns.lua  ramsey.lua  solow.lua
RiDMC/inst/models/Primer/: con2d.lua  cona.lua  conb.lua  conbif.lua  conlocal.lua  conlyapa.lua  conlyapb.lua  conpar.lua  disa.lua  disbif.lua  dispar.lua  disparlag.lua  flip.lua  hopf.lua  logistic.lua  quasi.lua  vanderpol.lua
RiDMC/man/: Basin.Rd  BasinMulti.Rd  Bifurcation.Rd  LexpMap.Rd  Model.Rd  RiDMC-package.Rd  Trajectory.Rd  TrajectoryList.Rd  colorLegendGrob.Rd  cycles.Rd  domain.Rd  exModelFile.Rd  getModelF.Rd  getModelMap.Rd  internals.Rd  lexp.Rd  makeFunPower.Rd  makePalette.Rd  makePlotGrobViewports.Rd  plot.idmc_basin.Rd  plotGrob.Rd  raster.Rd  sets.Rd
RiDMC/src/: Makevars.in  Makevars.win  attractor.c  attractors_list.c  basin.c  basin_common.c  basin_multi.c  basin_slow.c  cycles.c  gsl_rng_lualib.c  lexp.c  lexp_aux.c  matrices.c  model.c  r_basin.c  r_basin_multi.c  r_basin_slow.c  r_bifurcation.c  r_cycles.c  r_lexp.c  r_model.c  r_traj.c  r_version.c  raster.c  ridmc.c  ridmc.h  traj.c  version.c
RiDMC/src/idmclib/: attractor.h  basin.h  basin_common.h  basin_multi.h  basin_slow.h  cycles.h  defines.h  gsl_rng_lualib.h  lexp.h  lexp_aux.h  matrices.h  model.h  raster.h  traj.h  version.h
RiDMC/tests/: cycles.R  cycles.Rout  cycles.Rout.save  init.R  lexpMap.R  plotGrob.R  polygons.R  rasterGrob.R  test_BasinMulti.R  tools.R  tools.Rout.save  trListGrob.RData.save  trajectoryList.R
